--- a/index.html
+++ b/index.html
@@ -18,37 +18,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700;800&family=Noto+Sans+TC:wght@400;700;900&display=swap" rel="stylesheet">
 
   <style>
-.outer{
-  width:100vw;
-  height:100vh;
-  overflow:hidden;
-  display:grid;
-  place-items:center;
-  background:#ffffff;
-}
-.fit{
-  width:1024px;
-  height:768px;
-  transform-origin:center center;
-  transform:scale(calc(min(100vw/1024, (var(--vh, 1vh)*100)/768)));
-  background:#ffffff;
-}
-/* —— 全站沉浸式設定 —— */
+    /* —— 全站沉浸式設定 —— */
     html,body{
-      height:100%;margin:0;overscroll-behavior:none;touch-action:none;
+      height:100%;margin:0;overscroll-behavior:none;touch-action:manipulation;
       background:#ffffff;color:#3b3f44;
     }
     *{-webkit-user-select:none;user-select:none;-webkit-touch-callout:none;}
     input,textarea{-webkit-user-select:text;user-select:text;-webkit-touch-callout:default;}
 
     /* 外層容器佔滿螢幕（固定定位，避免 100vh/dvh 落差） */
-    
+    .outer{width:100vw;height:100vh;overflow:auto;display:flex;justify-content:center;align-items:center;}
 
     /* —— 舞台（基準 1024×768），由 JS 等比縮放置中 —— */
-    .stage
-  
-  
+    .stage.fit{
+      width:1024px;  /* ← 基準寬 */
+      height:768px;  /* ← 基準高 */
+      position:relative; left:auto; top:auto;
+       /* scale 由 JS 動態帶入 */
+                     /* 以左上角作為縮放原點 */
+      background:#ffffff;
+    }
+  max-width:100%;
+  max-height:100%;
 }
+
 
     /* 視覺設定 */
     :root{
@@ -72,7 +65,7 @@
       font-weight:900; font-size:24px; font-family:"Noto Sans TC",sans-serif;
       box-shadow:0 6px 0 rgba(0,0,0,0.12),0 12px 32px rgba(0,0,0,0.06);
       transition:transform .08s ease,background .15s ease,box-shadow .15s ease;
-    }
+     z-index:10; pointer-events:auto; cursor:pointer; }
     .cta:hover{
       background:var(--button-hover); transform:translateY(-1px);
       box-shadow:0 7px 0 rgba(0,0,0,0.12),0 14px 36px rgba(0,0,0,0.08);
@@ -81,33 +74,19 @@
       transform:translateY(1px);
       box-shadow:0 4px 0 rgba(0,0,0,0.12),0 8px 20px rgba(0,0,0,0.06);
     }
+  
+/* —— Compact 縮小版（當縮放比 < 0.9 時）—— */
+.compact .text-block{ font-size:24px; line-height:1.7; }
+.compact .cta{ font-size:24px; padding:14px 28px; bottom:60px; right:60px; }
+.compact .q{ font-size:30px; }
+.compact .opt{ font-size:22px; padding:18px 24px; }
+.compact .label{ font-size:28px; }
+.compact .pill{ padding:14px 24px; }
+.compact h1{ font-size:36px; }
+.compact .subtitle{ font-size:26px; }
+
+
 </style>
-<style>
-
-/* iPad / iOS Safari：避免 100vh 位移 */
-.outer{ height: 100vh; } /* fallback */
-@supports (height: 100dvh) {
-  .outer{ height: 100dvh; }
-}
-.outer.use-vh-var{ height: calc(var(--vh, 1vh) * 100); }
-
-</style>
-
-<script>
-(function(){
-  function setVH(){
-    var h = (window.visualViewport ? window.visualViewport.height : window.innerHeight);
-    document.documentElement.style.setProperty('--vh', (h * 0.01) + 'px');
-  }
-  setVH();
-  window.addEventListener('resize', setVH);
-  window.addEventListener('orientationchange', setVH);
-  addEventListener('DOMContentLoaded', function(){
-    document.querySelectorAll('.outer').forEach(function(n){ n.classList.add('use-vh-var'); });
-  });
-})();
-</script>
-
 </head>
 
 <body>
@@ -121,5 +100,24 @@
     </div>
   </div>
 
-  </body>
+  
+<script>
+(function(){
+  var BASE_W = 1024;
+  var BASE_H = 768;
+  function checkCompact(){
+    var vv = window.visualViewport;
+    var vw = vv ? vv.width : window.innerWidth;
+    var vh = vv ? vv.height : window.innerHeight;
+    var scale = Math.min(vw/BASE_W, vh/BASE_H);
+    document.documentElement.classList.toggle('compact', scale < 0.9);
+  }
+  checkCompact();
+  if (window.visualViewport) visualViewport.addEventListener('resize', checkCompact, {passive:true});
+  window.addEventListener('resize', checkCompact, {passive:true});
+  window.addEventListener('orientationchange', checkCompact);
+})();
+</script>
+
+</body>
 </html>
