--- a/page4.html
+++ b/page4.html
@@ -2,249 +2,74 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title>What's in Your Hand?｜第一階段（1–5）</title>
-
-  <!-- iOS 全螢幕 / 加到主畫面 -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="What's in Your Hand?">
-  <link rel="apple-touch-icon" href="icon.png">
-
-  <!-- PWA manifest -->
-  <link rel="manifest" href="manifest.json">
-
-  <!-- 防止誤縮放與邊界空白 -->
+  <title>What's in Your Hand?｜題目頁（修正版）</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
-
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700;800&family=Noto+Sans+TC:wght@400;700;900&display=swap" rel="stylesheet">
-
   <style>
-    /* —— 全站沉浸式設定 —— */
-    html,body{height:100%;margin:0;overscroll-behavior:none;touch-action:manipulation;background:#ffffff;color:#3b3f44;}
-    *{-webkit-user-select:none;user-select:none;-webkit-touch-callout:none;}
-    input,textarea{-webkit-user-select:text;user-select:text;-webkit-touch-callout:default;}
+    :root{ --_scale:1; --vh:1vh; --text:#2A2F35; --accent:#bfefff; }
+    html,body{ height:100%; margin:0; touch-action:manipulation; background:#fff; color:var(--text); }
+    .outer{ width:100vw; height:100vh; display:grid; place-items:center; overflow:hidden; pointer-events:none; }
+    .outer.use-vh-var{ height:calc(var(--vh) * 100); }
+    .fit{ width:1366px; height:1024px; position:relative; -webkit-transform:translateZ(0) scale(var(--_scale)); transform:translateZ(0) scale(var(--_scale)); pointer-events:auto; background:#fff; }
+    .stage{ width:100%; height:100%; position:relative; }
 
-    /* 自動縮放舞台至 1366×1024 */
-    .outer{width:100vw;height:100vh;overflow:auto;display:flex;justify-content:center;align-items:center;}
-       .fit{
-  width:1366px;
-  height:1024px;
-   /* ← 改這行 */
+    /* 任何鋪滿的背景層都不吃事件、且層級較低，避免遮住題目與 lead */
+    .bg, video, canvas, .overlay, .fx{ position:absolute; inset:0; z-index:0; pointer-events:none; }
 
-}
-  max-width:100%;
-  max-height:100%;
-}
+    /* 題目容器：給明確層級與內距，避免被卡住 */
+    .q-wrap{ position:absolute; inset:8% 10% auto 10%; z-index:10; font-family:"Noto Sans TC",sans-serif; }
+    .lead{ font-weight:900; font-size:36px; line-height:1.4; margin:0 0 18px 0; position:relative; z-index:12; }
+    .desc{ font-size:22px; line-height:1.8; margin:0 0 24px 0; }
 
-
-    :root{--bg:#ffffff;--text:#3b3f44;--muted:#6b7076;--pill:#bfefff;--pill-hover:#a8e6ff;}
-    body{font-family:"Manrope","Noto Sans TC",system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;}
-
-    .stage{width:1366px;height:1024px;position:relative;background:var(--bg);}
-    .wrap{position:absolute;left:50%;top:10%;transform:translateX(-50%);width:min(1000px,88%)}
-
-    .lead{font:700 18px "Manrope",sans-serif;letter-spacing:.2px;color:var(--muted);text-align:center;margin:0 0 12px}
-    .q{font-weight:900;font-size:36px;text-align:center;margin:0 0 28px;white-space:pre-line;}
-
-    .options{display:grid;gap:26px}
-    .opt{display:block;text-decoration:none;border:none;background:var(--pill);color:#1f2a33;padding:22px 28px;border-radius:22px;
-      box-shadow:0 6px 0 rgba(0,0,0,.12),0 12px 32px rgba(0,0,0,.06);
-      font:900 26px "Noto Sans TC",sans-serif;text-align:center;cursor:pointer;
-      transition:transform .08s ease, background .15s ease, box-shadow .15s ease}
-    .opt:hover{background:var(--pill-hover);transform:translateY(-1px);box-shadow:0 7px 0 rgba(0,0,0,.12),0 14px 36px rgba(0,0,0,.08)}
-    .opt:active{transform:translateY(1px);box-shadow:0 4px 0 rgba(0,0,0,.12),0 8px 20px rgba(0,0,0,.06)}
-
-    .meta{position:absolute;left:50%;bottom:48px;transform:translateX(-50%);width:min(1000px,88%);
-      display:flex;justify-content:space-between;align-items:center;color:var(--muted);font-weight:700}
-    .progress{height:8px;background:#e8f6ff;border-radius:999px;overflow:hidden;flex:1;margin-left:16px}
-    .bar{height:100%;width:0;background:#8bd9ff}
-  
-/* —— Compact 縮小版（當縮放比 < 0.9 時）—— */
-.compact .text-block{ font-size:24px; line-height:1.7; }
-.compact .cta{ font-size:24px; padding:14px 28px; bottom:60px; right:60px; }
-.compact .q{ font-size:30px; }
-.compact .opt{ font-size:22px; padding:18px 24px; }
-.compact .label{ font-size:28px; }
-.compact .pill{ padding:14px 24px; }
-.compact h1{ font-size:36px; }
-.compact .subtitle{ font-size:26px; }
-
-
-</style>
-  <style>
-  /* iPad / iOS Safari：避免 100vh 位移 */
-  .outer{width:100vw;height:100vh;overflow:auto;display:flex;justify-content:center;align-items:center;} /* 先給舊機 fallback */
-  @supports (height: 100dvh) {
-    .outer{width:100vw;height:100vh;overflow:auto;display:flex;justify-content:center;align-items:center;} /* 新版 iOS / iPadOS 用 dvh */
-  }
-  /* 再準備一個 --vh 變數備援（超舊版 iOS 也穩）*/
-  .outer.use-vh-var{ height: calc(var(--vh, 1vh) * 100); }
-
-/* —— Compact 縮小版（當縮放比 < 0.9 時）—— */
-.compact .text-block{ font-size:24px; line-height:1.7; }
-.compact .cta{ font-size:24px; padding:14px 28px; bottom:60px; right:60px; }
-.compact .q{ font-size:30px; }
-.compact .opt{ font-size:22px; padding:18px 24px; }
-.compact .label{ font-size:28px; }
-.compact .pill{ padding:14px 24px; }
-.compact h1{ font-size:36px; }
-.compact .subtitle{ font-size:26px; }
-
-
-</style>
-<script>
-  // 讓極端情境下也穩：用 visualViewport 設定 --vh
-  (function(){
-    function setVH(){
-      var h = (window.visualViewport ? window.visualViewport.height : window.innerHeight);
-      document.documentElement.style.setProperty('--vh', (h * 0.01) + 'px');
+    /* 選項按鈕：確保可點、層級高 */
+    .opts{ display:grid; grid-template-columns:1fr 1fr; gap:16px; }
+    .opt{
+      display:block; padding:18px 20px; border-radius:16px; border:2px solid #e6edf2;
+      background:#f8fbff; font-size:22px; font-weight:700; text-align:center; color:#1f2a33;
+      cursor:pointer; -webkit-tap-highlight-color:transparent; touch-action:manipulation;
+      position:relative; z-index:12;
     }
-    setVH();
-    window.addEventListener('resize', setVH);
-    window.addEventListener('orientationchange', setVH);
-    // 給 .outer 一個 class 以啟用備援
-    addEventListener('DOMContentLoaded', () => {
-      document.querySelectorAll('.outer').forEach(n => n.classList.add('use-vh-var'));
-    });
-  })();
-</script>
-</head>
+    .opt:active{ transform:translateY(1px); }
 
+    /* 防止任何「看不到字」的情況：強制文字層在最上面 */
+    .q-wrap, .q-wrap *{ text-shadow:none; mix-blend-mode:normal; }
+
+  </style>
+  <script>
+    (function(){
+      function setVH(){
+        var h = (window.visualViewport ? window.visualViewport.height : window.innerHeight);
+        document.documentElement.style.setProperty('--vh', (h * 0.01) + 'px');
+        var s = Math.min(window.innerWidth/1366, h/1024);
+        document.documentElement.style.setProperty('--_scale', s);
+      }
+      setVH();
+      addEventListener('resize', setVH, {passive:true});
+      addEventListener('orientationchange', setVH);
+      addEventListener('pageshow', setVH);
+      document.addEventListener('DOMContentLoaded', function(){
+        document.querySelectorAll('.outer').forEach(n=>n.classList.add('use-vh-var'));
+      }, {passive:true});
+    })();
+  </script>
+</head>
 <body>
   <div class="outer">
-    <div class="stage fit">
-      <div class="wrap">
-        <p id="lead" class="lead"></p>
-        <h2 id="question" class="q"></h2>
-        <div id="options" class="options"></div>
-      </div>
-      <div class="meta">
-        <div id="counter">1 / 5</div>
-        <div class="progress" aria-hidden="true"><div id="bar" class="bar"></div></div>
+    <div class="fit stage">
+      <!-- 例：背景影片或特效層 -->
+      <div class="bg"></div>
+      <!-- 題目內容（示意，可把原本 page4.html 的內容貼進 q-wrap） -->
+      <div class="q-wrap">
+        <h2 class="lead">（範例）你覺得自己在團體中的習慣比較偏向哪一種？</h2>
+        <p class="desc">這是描述文字（若原檔有 .lead 之後的說明），請把原始內容替換到這段。</p>
+        <div class="opts">
+          <button class="opt">A. 喜歡主動發起與帶頭</button>
+          <button class="opt">B. 擅長協調、傾聽與補位</button>
+          <button class="opt">C. 靜靜觀察、在關鍵時刻出手</button>
+          <button class="opt">D. 隨機應變、看情況行動</button>
+        </div>
       </div>
     </div>
   </div>
-
-  <script>
-    // 第一階段題庫
-    const questions = [
-      {
-        lead: '你走進熱鬧的廣場，一位穿著五彩繽紛衣服的女孩朝你揮手。',
-        q: '「如果你的手也能穿衣服，你覺得它會穿什麼樣的衣服呢？」',
-        opts: [
-          {t:'輕便的露營裝，帶著實用的小口袋和背包，準備去探險。',k:'extravert'},
-          {t:'柔軟溫暖的毛衣，像雲朵一樣包裹手指。',k:'introvert'},
-          {t:'金屬扣環的俐落短外套，行動快速又輕盈。',k:'decisive'},
-        ]
-      },
-      {
-        lead: '繼續往前走，是一條安靜的小巷，一個戴著耳機的少年坐在階梯上，抬頭看著你。',
-        q: '「如果來到一個陌生的地方，你會先做出什麼行動？」',
-        opts: [
-          {t:'慢慢掃視週遭，拿起筆在手背紀錄每個細節。',k:'analytic'},
-          {t:'伸手觸碰牆面或地板，感受這裡的溫度與質地。',k:'caring'},
-          {t:'迫不及待想要認識新鮮的人事物',k:'extravert'},
-        ]
-      },
-      {
-        lead: '接著，你聽到前方有笑聲，一個背著超大背包的人朝你揮手。',
-        q: '「當你看到一個人正比著手語，動作卻有些慌亂，\n他似乎想說什麼，但沒有人懂他。這時你會怎麼做？」',
-        opts: [
-          {t:'先觀察他比的手勢與表情，推測意思後再小心地比出回應。',k:'introvert'},
-          {t:'微笑著用眼神建立交流，比出「沒事」和「慢慢來」。',k:'decisive'},
-          {t:'用手機輸入文字，幫他翻譯訊息。',k:'analytic'},
-        ]
-      },
-      {
-        lead: '你感覺有點餓了，走進一間餐廳，突然一位客人的湯灑在地上。服務生比出「停！」的手勢，示意大家別靠近。',
-        q: '「遇到這種狀況時，你會怎麼做？」',
-        opts: [
-          {t:'走向那位驚慌的客人，安撫他的情緒。',k:'caring'},
-          {t:'立刻拿抹布或叫店員過來，一邊清理一邊請其他人讓開。',k:'extravert'},
-          {t:'當作沒有看到，默默走掉',k:'introvert'},
-        ]
-      },
-      {
-        lead: '當你吃飽準備離開時，牆上的門突然變成三道了！而每個門上都有一個神祕的手語符號。',
-        q: '「請憑直覺，選出你想推開的那一道門吧。」',
-        opts: [
-          {t:'A門',k:'decisive'},
-          {t:'B門',k:'analytic'},
-          {t:'C門',k:'caring'},
-        ]
-      }
-    ];
-
-    const scoreKeys=['extravert','introvert','decisive','analytic','caring'];
-    const defaultScores={extravert:0,introvert:0,decisive:0,analytic:0,caring:0};
-
-    function getScores(){try{return JSON.parse(localStorage.getItem('handname_scores'))||{...defaultScores};}catch(e){return {...defaultScores};}}
-    function setScores(s){localStorage.setItem('handname_scores',JSON.stringify(s));}
-
-    let scores=getScores(),idx=0;
-    const leadEl=document.getElementById('lead');
-    const qEl=document.getElementById('question');
-    const opsEl=document.getElementById('options');
-    const counterEl=document.getElementById('counter');
-    const barEl=document.getElementById('bar');
-
-    function render(){
-      const item=questions[idx];
-      leadEl.textContent=item.lead;
-      qEl.textContent=item.q;
-      opsEl.innerHTML='';
-      item.opts.forEach(o=>{
-        const b=document.createElement('button');
-        b.className='opt';
-        b.type='button';
-        b.textContent=o.t;
-        b.addEventListener('click',()=>choose(o.k));
-        opsEl.appendChild(b);
-      });
-      counterEl.textContent=`${idx+1} / ${questions.length}`;
-      barEl.style.width=((idx)/questions.length*100)+'%';
-    }
-
-    function choose(key){
-      scores[key]=(scores[key]||0)+1;
-      setScores(scores);
-      idx++;
-      if(idx<questions.length){render();}
-      else{
-        barEl.style.width='100%';
-        window.location.href='stage2-intro.html';
-      }
-    }
-
-    // 快捷鍵：1/2/3
-    window.addEventListener('keydown',e=>{
-      if(['1','2','3'].includes(e.key)){
-        const n=parseInt(e.key,10)-1;
-        const item=questions[idx];
-        if(item&&item.opts[n])choose(item.opts[n].k);
-      }
-    });
-
-    render();
-  </script>
-
-<script>
-(function(){
-  var BASE_W = 1366;
-  var BASE_H = 1024;
-  function checkCompact(){
-    var vv = window.visualViewport;
-    var vw = vv ? vv.width : window.innerWidth;
-    var vh = vv ? vv.height : window.innerHeight;
-    var scale = Math.min(vw/BASE_W, vh/BASE_H);
-    document.documentElement.classList.toggle('compact', scale < 0.9);
-  }
-  checkCompact();
-  if (window.visualViewport) visualViewport.addEventListener('resize', checkCompact, {passive:true});
-  window.addEventListener('resize', checkCompact, {passive:true});
-  window.addEventListener('orientationchange', checkCompact);
-})();
-</script>
-
 </body>
 </html>
