--- a/page4.html
+++ b/page4.html
@@ -52,6 +52,8 @@
       }, {passive:true});
     })();
   </script>
+  <link rel="stylesheet" href="page4.css">
+<script src="page4.js" defer></script>
 </head>
 <body>
   <div class="outer">
