--- a/page4.html
+++ b/page4.html
@@ -6,6 +6,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700;800&family=Noto+Sans+TC:wght@400;700;900&display=swap" rel="stylesheet">
   <style>
+/* === iPad Safari Fix Patch (injected) === */
+:root{ --_scale:1; --vh:1vh; }
+html,body{ touch-action:manipulation; }
+.outer{ pointer-events:none; }
+.fit{ pointer-events:auto; -webkit-transform:translateZ(0) scale(var(--_scale)); transform:translateZ(0) scale(var(--_scale)); }
+
+/* 將題目整體位置下移，避免被卡在頁面上緣或安全區之外 */
+.q-wrap,.qwrap,.question-wrap,.questionArea,.question-area,.question{
+  position:relative;
+  top:90px; /* 需要再下移可調大，例如 120px */
+}
+
+/* 讓 lead 行一定可見，並避免被背景層覆蓋 */
+.lead{
+  position:relative;
+  display:block;
+  margin:0 120px 18px 120px;
+  z-index:12;
+  font-weight:900;
+}
+
+/* 選項群組與按鈕的間距與命中層級 */
+.opts,.options,.opt-group{
+  position:relative;
+  margin:12px 120px 0 120px;
+  z-index:10;
+}
+.opt, .btn, button, a.cta{
+  position:relative;
+  z-index:12;
+  -webkit-tap-highlight-color:transparent;
+  touch-action:manipulation;
+  cursor:pointer;
+}
+
+/* 任何鋪滿畫面的視覺層避免吃事件與遮住題目 */
+video,canvas,.bg,.overlay,.fx,.cover,.flash,.countdown{
+  pointer-events:none;
+  z-index:0;
+  mix-blend-mode:normal;
+  text-shadow:none;
+}
+/* === end patch === */
+
     :root{ --_scale:1; --vh:1vh; --text:#2A2F35; --accent:#bfefff; }
     html,body{ height:100%; margin:0; touch-action:manipulation; background:#fff; color:var(--text); }
     .outer{ width:100vw; height:100vh; display:grid; place-items:center; overflow:hidden; pointer-events:none; }
@@ -52,8 +96,7 @@
       }, {passive:true});
     })();
   </script>
-  <link rel="stylesheet" href="page4.css">
-<script src="page4.js" defer></script>
+  
 </head>
 <body>
   <div class="outer">
