--- a/booth-preview.html
+++ b/booth-preview.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title>拍貼｜模板預覽（自信女）</title>
+  <title>拍貼｜模板預覽（自信女，無滾動精簡版）</title>
 
   <!-- iOS 全螢幕 / 加到主畫面 -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -23,134 +23,77 @@
     html,body{height:100%;margin:0;overscroll-behavior:none;touch-action:manipulation;background:#fff;}
     *{-webkit-user-select:none;user-select:none;-webkit-touch-callout:none;}
 
-    /* 等比縮放舞台到 1366×1024 */
-    /* 等比縮放舞台到 1366×1024 */
-.outer{
-  width:100vw;height:100vh;overflow:auto;
-  display:flex;justify-content:center;align-items:center;background:#fff;
-}
-
-.fit{
-  width:1366px;
-  height:1024px;
-  max-width:100%;
-  max-height:100%;
-}
-
-
     :root{--bg:#ffffff;--text:#3b3f44;--muted:#6b7076;--pill:#bfefff;--pill-hover:#a8e6ff;}
+
     body{font-family:"Manrope","Noto Sans TC",system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:var(--text);}
 
+    /* —— 等比舞台 —— */
+    .outer{
+      width:100vw;height:100vh;overflow:hidden;
+      display:grid;place-items:center;background:#fff;
+    }
+    @supports (height: 100dvh){
+      .outer{height:100dvh;}
+    }
+    .outer.use-vh-var{ height: calc(var(--vh, 1vh) * 100); }
+
     .stage{width:1366px;height:1024px;position:relative;}
+    .fit{width:1366px;height:1024px;max-width:100%;max-height:100%;}
+
+    /* —— 版面：左文右圖 —— */
     .wrap{
       position:absolute;inset:0;
       display:grid;
-      grid-template-columns:520px 1fr;
+      grid-template-columns:520px 480px; /* 右欄更窄，避免滾動 */
+      justify-content:space-between;
       align-items:center;
       padding-left:72px;
       padding-right:72px;
+      box-sizing:border-box;
     }
 
-    .left h2{font-weight:900;font-size:36px;margin:0 0 12px;}
-    .left p{font-weight:900;font-size:32px;margin:0;}
-    .left p + p{margin-top:10px;}
+    .left h2{font-weight:900;font-size:34px;margin:0 0 10px;}
+    .left p{font-weight:900;font-size:28px;margin:0;}
+    .left p + p{margin-top:8px;}
 
     .cta{
-      margin-top:36px;display:inline-block;padding:16px 36px;
-      border-radius:18px;background:var(--pill);color:#1f2a33;text-decoration:none;
-      font-weight:900;font-size:28px;
+      margin-top:28px;display:inline-block;padding:14px 28px;
+      border-radius:16px;background:var(--pill);color:#1f2a33;text-decoration:none;
+      font-weight:900;font-size:24px;
       box-shadow:0 6px 0 rgba(0,0,0,.12),0 12px 32px rgba(0,0,0,.06);
       transition:transform .08s ease, background .15s ease, box-shadow .15s ease;
-     z-index:10; pointer-events:auto; cursor:pointer; }
+      z-index:10; pointer-events:auto; cursor:pointer;
+    }
     .cta:hover{background:var(--pill-hover);transform:translateY(-1px);box-shadow:0 7px 0 rgba(0,0,0,.12),0 14px 36px rgba(0,0,0,.08);}
     .cta:active{transform:translateY(1px);box-shadow:0 4px 0 rgba(0,0,0,.12),0 8px 20px rgba(0,0,0,.06);}
 
+    /* —— 右側拍貼模板：更小、更置中 —— */
     .right{display:grid;place-items:center;}
-    .frame{
-      width:760px;height:820px;display:grid;place-items:center;
-    }
-    .right .frame{
-  transform: scale(.85);          /* 0.85=縮小到 85% */
-  transform-origin: center center;
-}
-    .frame img{
-      display:block;width:100%;height:auto;object-fit:contain;border-radius:6px;
-    }
-  
-/* —— Compact 縮小版（當縮放比 < 0.9 時）—— */
-.compact .text-block{ font-size:24px; line-height:1.7; }
-.compact .cta{ font-size:24px; padding:14px 28px; bottom:60px; right:60px; }
-.compact .q{ font-size:30px; }
-.compact .opt{ font-size:22px; padding:18px 24px; }
-.compact .label{ font-size:28px; }
-.compact .pill{ padding:14px 24px; }
-.compact h1{ font-size:36px; }
-.compact .subtitle{ font-size:26px; }
+    .frame{width:360px;height:560px;display:grid;place-items:center;}
+    .frame img{display:block;width:100%;height:auto;object-fit:contain;border-radius:6px;}
 
+    /* —— Compact 縮小版（極端縮放時）—— */
+    .compact .left h2{ font-size:30px; }
+    .compact .left p{ font-size:24px; }
+    .compact .cta{ font-size:22px; padding:12px 24px; }
+  </style>
 
-</style>
-  <style>
-  /* iPad / iOS Safari：避免 100vh 位移 */
-  .outer{width:100vw;height:100vh;overflow:auto;display:flex;justify-content:center;align-items:center;} /* 先給舊機 fallback */
-  @supports (height: 100dvh) {
-    .outer{width:100vw;height:100vh;overflow:auto;display:flex;justify-content:center;align-items:center;} /* 新版 iOS / iPadOS 用 dvh */
-  }
-  /* 再準備一個 --vh 變數備援（超舊版 iOS 也穩）*/
-  .outer.use-vh-var{ height: calc(var(--vh, 1vh) * 100); }
-
-/* —— Compact 縮小版（當縮放比 < 0.9 時）—— */
-.compact .text-block{ font-size:24px; line-height:1.7; }
-.compact .cta{ font-size:24px; padding:14px 28px; bottom:60px; right:60px; }
-.compact .q{ font-size:30px; }
-.compact .opt{ font-size:22px; padding:18px 24px; }
-.compact .label{ font-size:28px; }
-.compact .pill{ padding:14px 24px; }
-.compact h1{ font-size:36px; }
-.compact .subtitle{ font-size:26px; }
-
-
-</style>
-
-<style>
-  /* —— 調整版型：右欄固定欄寬，圖縮小 —— */
-  .wrap{
-    /* 原本是 grid-template-columns: 520px 1fr; */
-    grid-template-columns: 520px 520px; /* 右欄收窄，整體更像你的版型 */
-  }
-
-  .right{ display:grid; place-items:center; }
-  .frame{
-    /* 直接用較小的固定尺寸，而不是 transform 縮放 */
-    width: 420px;
-    height: 640px;
-    display:grid; place-items:center;
-  }
-  .right .frame{
-    transform: none !important;     /* 移除之前的 scale(.85) */
-    transform-origin: center center; /* 保留原點，未來要微調也方便 */
-  }
-
-  .frame img{
-    width: 100%; height: auto; object-fit: contain; border-radius: 6px;
-  }
-</style>
-
-<script>
-  // 讓極端情境下也穩：用 visualViewport 設定 --vh
-  (function(){
-    function setVH(){
-      var h = (window.visualViewport ? window.visualViewport.height : window.innerHeight);
-      document.documentElement.style.setProperty('--vh', (h * 0.01) + 'px');
-    }
-    setVH();
-    window.addEventListener('resize', setVH);
-    window.addEventListener('orientationchange', setVH);
-    // 給 .outer 一個 class 以啟用備援
-    addEventListener('DOMContentLoaded', () => {
-      document.querySelectorAll('.outer').forEach(n => n.classList.add('use-vh-var'));
-    });
-  })();
-</script>
+  <script>
+    // 讓極端情境下也穩：用 visualViewport 設定 --vh
+    (function(){
+      function setVH(){
+        var h = (window.visualViewport ? window.visualViewport.height : window.innerHeight);
+        document.documentElement.style.setProperty('--vh', (h * 0.01) + 'px');
+      }
+      setVH();
+      window.addEventListener('resize', setVH);
+      window.addEventListener('orientationchange', setVH);
+      // 給 .outer 一個 class 以啟用備援
+      addEventListener('DOMContentLoaded', () => {
+        document.querySelectorAll('.outer').forEach(n => n.classList.add('use-vh-var'));
+      });
+    })();
+  </script>
 </head>
 <body>
   <div class="outer">
@@ -179,23 +122,22 @@
     }));
   </script>
 
-<script>
-(function(){
-  var BASE_W = 1366;
-  var BASE_H = 1024;
-  function checkCompact(){
-    var vv = window.visualViewport;
-    var vw = vv ? vv.width : window.innerWidth;
-    var vh = vv ? vv.height : window.innerHeight;
-    var scale = Math.min(vw/BASE_W, vh/BASE_H);
-    document.documentElement.classList.toggle('compact', scale < 0.9);
-  }
-  checkCompact();
-  if (window.visualViewport) visualViewport.addEventListener('resize', checkCompact, {passive:true});
-  window.addEventListener('resize', checkCompact, {passive:true});
-  window.addEventListener('orientationchange', checkCompact);
-})();
-</script>
-
+  <script>
+  (function(){
+    var BASE_W = 1366;
+    var BASE_H = 1024;
+    function checkCompact(){
+      var vv = window.visualViewport;
+      var vw = vv ? vv.width : window.innerWidth;
+      var vh = vv ? vv.height : window.innerHeight;
+      var scale = Math.min(vw/BASE_W, vh/BASE_H);
+      document.documentElement.classList.toggle('compact', scale < 0.9);
+    }
+    checkCompact();
+    if (window.visualViewport) visualViewport.addEventListener('resize', checkCompact, {passive:true});
+    window.addEventListener('resize', checkCompact, {passive:true});
+    window.addEventListener('orientationchange', checkCompact);
+  })();
+  </script>
 </body>
 </html>
